--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,9 +17,9 @@ jobs:
         run: terraform init
         working-directory: ./terraform
         env:
-          GOOGLE_CREDENTIALS: ${{ secrets.sa_mymilk_lab_gcp }}
+          GOOGLE_CREDENTIALS: ${{ secrets.SA_MYMILK_LAB_GCP }}
       - name: terraform plan
         run: terraform plan -var "project_id=mymilk-lab"
         working-directory: ./terraform
         env:
-          GOOGLE_CREDENTIALS: ${{ secrets.sa_mymilk_lab_gcp }}
+          GOOGLE_CREDENTIALS: ${{ secrets.SA_MYMILK_LAB_GCP }}
