--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -11,8 +11,12 @@ jobs:
     steps:
       - name: GIT checkout
         uses: actions/checkout@v2
-      - name: Google Cloud Auth
-        run: gcloud auth application-default login
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          project_id: "mymilk-lab"
+          service_account_key: ${{ secrets.SA_MYMILK_LAB_GCP }}
+          export_default_credentials: true
       - name: Setup terraform
         uses: hashicorp/setup-terraform@v1
       - name: terraform init
