--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,6 +17,8 @@ jobs:
           project_id: "mymilk-lab"
           service_account_key: ${{ secrets.SA_MYMILK_LAB_GCP }}
           export_default_credentials: true
+      - name: Export GCP Credentials
+        run: export GOOGLE_CREDENTIALS=${{ secrets.SA_MYMILK_LAB_GCP }}
       - name: Setup terraform
         uses: hashicorp/setup-terraform@v1
       - name: terraform init
