--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Export GCP Credentials
         run: echo ${{ secrets.SA_MYMILK_LAB_GCP }} > ./terraform/credentials.json
       - name: Test
-        run: cat ./terraform/credentials.json
+        run: echo ${{ secrets.SA_MYMILK_LAB_GCP }}
       - name: Setup terraform
         uses: hashicorp/setup-terraform@v1
       - name: terraform init
